# jaot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_LICENSES  docker-compose.e2e.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-hexaly.txt  requirements.txt  run.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml
app/: config.py  main.py
app/api/: deps.py
app/data/: __init__.py
app/domains/: README.md
app/mcp/: __init__.py
app/models/: __init__.py  analytics_event.py  api_key.py  audit_log.py  builder_document.py  contact_message.py  conversation_attachment.py  credit_transaction.py  exchange_rate.py  favorite.py  featured_placement.py  formulation_rating.py  invoice.py  llm_conversation.py  model_version.py  model_view_event.py  notification.py  notification_preference.py  optimization_model.py  organization.py  platform_setting.py  platform_setting_audit.py  refresh_token.py  seller_tos_acceptance.py  trigger.py  usage_record.py  user.py  verification_request.py  withdrawal.py  workspace.py  workspace_credits.py
app/schemas/: __init__.py  admin.py  admin_settings.py  analytics.py  api_key.py  attachment.py  auth.py  builder.py  common.py  contact.py  credits.py  featured_placement.py  feedback.py  file_io.py  gdpr.py  guidance.py  health.py  llm.py  model.py  optimization.py  organization.py  profile.py  schedule.py  seller.py  seller_analytics.py  tier.py  trigger.py  user.py  verification.py  version.py  workspace.py
app/services/: __init__.py  analytics_service.py  audit_service.py  credits_service.py  document_extraction.py  email_service.py  email_translations.py  featured_placement_service.py  gdpr_service.py  idempotency.py  invoice_service.py  notification_service.py  onboarding_emails.py  platform_analytics_service.py  platform_settings_service.py  reconciliation_service.py  schedule_service.py  seller_analytics_service.py  settings_registry.py  solve_orchestrator.py  storage_service.py  stripe_connect_service.py  stripe_service.py  template_scorecard.py  trigger_service.py  verification_service.py  version_service.py  webhook_service.py  workspace_credits_service.py
app/shared/: __init__.py
app/tasks/: __init__.py  contact_tasks.py  cron_tasks.py  email_tasks.py  execution_reaper.py  financial_tasks.py  hexaly_platform_license_expiry.py  trigger_tasks.py  webhook_tasks.py
app/templates/: index.html
app/tests/: test_email_translations.py
deploy/: .env.production.example  DISASTER-RECOVERY.md  RUNBOOK-contact-form.md  RUNBOOK-hexaly-verification.md  RUNBOOK-plausible.md  RUNBOOK-queue-routing-fix.md  backup.sh  docker-compose.home.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  health-check.sh  maintenance.html  msmtprc.template  notify.sh  restore.sh  validate-env.sh
deploy/config/: Caddyfile  Caddyfile.home  Caddyfile.maintenance  postgresql.conf  rabbitmq.conf  redis.conf
deploy/docker/: Dockerfile  Dockerfile.caddy  Dockerfile.migrate  Dockerfile.seed  Dockerfile.worker  Dockerfile.worker.hexaly
deploy/plausible/: README.md
deploy/scripts/: fire_queue_backlog_test.py  replay-daily-task.sh  smoke-plausible.sh
deploy/secrets/: hexaly.lic.example
docs/: BOUNDED_CONTEXTS.md  CHANGELOG.md  TESTING.md
docs/ARCHITECTURE/: OVERVIEW.md  README.md  TECH_DEBT.md
docs/getting-started/: QUICKSTART.md  configuration.md
docs/operations/: DEPLOYMENT.md  pre-commit-guide.md
docs/specifications/: MDPDP_TW_T_FORMULATION.md
frontend/: .dockerignore  .gitignore  Dockerfile  eslint.config.mjs  lighthouserc-desktop.json  lighthouserc-gate.json  lighthouserc-mobile.json  mdx-components.tsx  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
frontend/e2e/: accessibility.spec.ts  admin-crud.spec.ts  admin.setup.ts  admin.spec.ts  advanced-solver.spec.ts  announcement-banner.spec.ts  attachments.spec.ts  auth.spec.ts  axe-public.spec.ts  billing.spec.ts  breadcrumbs.spec.ts  builder-canvas.spec.ts  builder-create.spec.ts  builder.spec.ts  cron.spec.ts  demo-flow.spec.ts  docs-code-blocks.spec.ts  docs.spec.ts  edge-cases.spec.ts  error-handling.spec.ts  feature-audit.spec.ts  feature-showcase.spec.ts  french-visual-audit.spec.ts  global.setup.ts  i18n-infrastructure.spec.ts  locale.spec.ts  marketplace-activate.spec.ts  marketplace-journey.spec.ts  marketplace-purchase.spec.ts  marketplace.spec.ts  multi-objective.spec.ts  platform-integration.spec.ts  plausible-tracker.spec.ts  (+15 more)
infra/: alembic.ini
scripts/: _seed_common.py  check-jsonld-allowlist.mjs  check_test_quality_tier1.py  cov_diff.py  doctor.py  ensure_admin_api_key.py  ensure_normal_user.py  export_openapi.py  gen-locale.cjs  generate-translation-placeholders.mjs  index_knowledge.py  lhci-gate-baseline.cjs  merge-i18n-section.mjs  seed_demo.py  seed_dev.py  validate-i18n-plurals.mjs  validate_all_templates.py
tests/: conftest.py  integration_proof.md  test_admin_auth.py  test_advanced_solver.py  test_analytics.py  test_api_key_service.py  test_auth_email.py  test_auth_lockout.py  test_auth_middleware_asgi.py  test_billing.py  test_builder.py  test_byok.py  test_byok_billing.py  test_byok_endpoint.py  test_cancel_refund_idempotency.py  test_catalog_filters.py  test_celery_tasks.py  test_community.py  test_concurrent_operations.py  test_config.py  test_credit_calculator.py  test_credit_race_conditions.py  test_credits.py  test_credits_service_consolidated.py  test_database_indexes.py  test_db_helpers.py  test_email_delivery.py  test_email_tasks_locale.py  test_execution_reaper.py  test_explain_infeasibility_endpoint.py  test_explain_solution_endpoint.py  test_explanation_service.py  test_expression_parser.py  test_featured_placement.py  test_feedback.py  test_file_export.py  test_file_import.py  test_financial_bugs.py  test_financial_tasks.py  test_formulation_clobber_guard.py  (+77 more)
(+910 files in other folders)
